--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <div class="col-lg-12 forecast-container">
                         <h5 class="five-day">5-Day Forecast</h5>
                         <!-- Day 1 -->
-                        <div class="card-deck text-center" style="color: grey;">
+                        <div class="card-deck text-center">
                             <div class="card" style="margin: 2px;">
                                 <div class="card-body forecast-card" id="day-1">
                                   
