--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <h1>Weather Dashboard</h1>
     </header>
-    <div class="container" style="color: rgb(104, 103, 103);">
+    <div class="container">
 
         <div class="row">
             <div class="col-lg-4" id="search-card">
